deploy/pottery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pottery
  namespace: ceramics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pottery
  template:
    metadata:
      labels:
        app: pottery
    spec:
      serviceAccountName: pottery
      containers:
        - name: pottery
          image: ghcr.io/hwenchi/ceramics/pottery:main
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
---
apiVersion: v1
kind: Service
metadata:
  name: pottery
  namespace: ceramics
spec:
  selector:
    app: pottery
  ports:
    - port: 80
      targetPort: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pottery
  namespace: ceramics
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`^(ceramics|[a-z]+-[a-z]+-(clay|glaze))\.software-dev\.ncsa\.illinois\.edu$`)
      kind: Rule
      services:
        - name: pottery
          port: 80
  tls:
    certResolver: letsencrypt
    domains:
      - main: ceramics.software-dev.ncsa.illinois.edu
